--- a/kindex.html
+++ b/kindex.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galerii</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="kstyles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -15,27 +15,15 @@
                 <img id="header-img" src="https://www.ametikool.ee/sites/ametikool.ee/files/styles/hitsa_core_logo/public/kuressaare-ametikool-100-logo-02-02-04.png?itok=LckElaLm">
             </a>
             <div id="links">
-                <a href="#galerii">Galerii</a>
+                <a href="./gindex.html">Galerii</a>
                 <a href="#info">Info</a>
-                <a href="#kontaktid">Kontaktid</a>
+                <a href="./kindex.html">Kontaktid</a>
             </div>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                 <i class="fa fa-bars"></i>
             </a>
         </div>
     </header>
-    <div class="galerii">
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-    </div>
     <script src="html.js"></script>
 </body>
 </html>
