--- a/gindex.html
+++ b/gindex.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <header id="header">
+        <a>
+            <img id="header-img" src="https://www.ametikool.ee/sites/ametikool.ee/files/styles/hitsa_core_logo/public/kuressaare-ametikool-100-logo-02-02-04.png?itok=LckElaLm">
+        </a>
         <div class="topnav">
-            <a href="#home" class="">
-                <img id="header-img" src="https://www.ametikool.ee/sites/ametikool.ee/files/styles/hitsa_core_logo/public/kuressaare-ametikool-100-logo-02-02-04.png?itok=LckElaLm">
-            </a>
             <div id="links">
                 <a href="#info">Info</a>
                 <a href="./gindex.html">Galerii</a>
@@ -24,18 +24,20 @@
             </a>
         </div>
     </header>
-    <div class="galerii">
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
-        <div class="img"></div>
+    <div id="galerii">
+        <div class="img">PIC 1</div>
+        <div class="img">PIC 1</div>
+        <div class="img">PIC 1</div>
+        <div class="img">PIC 1</div>
+        <div class="img">PIC 1</div>
+        <div class="img">PIC 1</div>
+        <div class="img">PIC 1</div>
+        <div class="img">PIC 1</div>
+        <div class="img">PIC 1</div>
+        <div class="img">PIC 1</div>
     </div>
+    <a id="show-more">Show More</a>
     <script src="html.js"></script>
+    <script src="more.js"></script>
 </body>
 </html>
