--- a/kindex.html
+++ b/kindex.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <header id="header">
+        <a>
+            <img id="header-img" src="https://www.ametikool.ee/sites/ametikool.ee/files/styles/hitsa_core_logo/public/kuressaare-ametikool-100-logo-02-02-04.png?itok=LckElaLm">
+        </a>
         <div class="topnav">
-            <a href="#home" class="">
-                <img id="header-img" src="https://www.ametikool.ee/sites/ametikool.ee/files/styles/hitsa_core_logo/public/kuressaare-ametikool-100-logo-02-02-04.png?itok=LckElaLm">
-            </a>
             <div id="links">
                 <a href="#info">Info</a>
                 <a href="./gindex.html">Galerii</a>
@@ -24,6 +24,118 @@
             </a>
         </div>
     </header>
+    <div class="kontaktid">
+        <div class="bord">
+            <a>
+                <img alt="" src="https://ca.slack-edge.com/TUUFNUCSW-UUVS3EYPM-88776dcb64b8-512">
+            </a>
+            <div class="info">
+                <b>Karl Gregor Rauniste</b>
+                <p>kutseõpetaja</p>
+                <p>4524651</p>
+                <a href="mailto:karl_gregor.rauniste@ametikool.ee">karl_gregor.rauniste@ametikool.ee</a>
+            </div>
+        </div>
+        <div class="bord">
+            <a>
+                <img alt="" src="https://ca.slack-edge.com/TUUFNUCSW-UUVS3EYPM-88776dcb64b8-512">
+            </a>
+            <div class="info">
+                <b>Karl Gregor Rauniste</b>
+                <p>kutseõpetaja</p>
+                <p>4524651</p>
+                <a href="mailto:karl_gregor.rauniste@ametikool.ee">karl_gregor.rauniste@ametikool.ee</a>
+            </div>
+        </div>
+        <div class="bord">
+            <a>
+                <img alt="" src="https://ca.slack-edge.com/TUUFNUCSW-UUVS3EYPM-88776dcb64b8-512">
+            </a>
+            <div class="info">
+                <b>Karl Gregor Rauniste</b>
+                <p>kutseõpetaja</p>
+                <p>4524651</p>
+                <a href="mailto:karl_gregor.rauniste@ametikool.ee">karl_gregor.rauniste@ametikool.ee</a>
+            </div>
+        </div>
+        <div class="bord">
+            <a>
+                <img alt="" src="https://ca.slack-edge.com/TUUFNUCSW-UUVS3EYPM-88776dcb64b8-512">
+            </a>
+            <div class="info">
+                <b>Karl Gregor Rauniste</b>
+                <p>kutseõpetaja</p>
+                <p>4524651</p>
+                <a href="mailto:karl_gregor.rauniste@ametikool.ee">karl_gregor.rauniste@ametikool.ee</a>
+            </div>
+        </div>
+        <div class="bord">
+            <a>
+                <img alt="" src="https://ca.slack-edge.com/TUUFNUCSW-UUVS3EYPM-88776dcb64b8-512">
+            </a>
+            <div class="info">
+                <b>Karl Gregor Rauniste</b>
+                <p>kutseõpetaja</p>
+                <p>4524651</p>
+                <a href="mailto:karl_gregor.rauniste@ametikool.ee">karl_gregor.rauniste@ametikool.ee</a>
+            </div>
+        </div>
+        <div class="bord">
+            <a>
+                <img alt="" src="https://ca.slack-edge.com/TUUFNUCSW-UUVS3EYPM-88776dcb64b8-512">
+            </a>
+            <div class="info">
+                <b>Karl Gregor Rauniste</b>
+                <p>kutseõpetaja</p>
+                <p>4524651</p>
+                <a href="mailto:karl_gregor.rauniste@ametikool.ee">karl_gregor.rauniste@ametikool.ee</a>
+            </div>
+        </div>
+        <div class="bord">
+            <a>
+                <img alt="" src="https://ca.slack-edge.com/TUUFNUCSW-UUVS3EYPM-88776dcb64b8-512">
+            </a>
+            <div class="info">
+                <b>Karl Gregor Rauniste</b>
+                <p>kutseõpetaja</p>
+                <p>4524651</p>
+                <a href="mailto:karl_gregor.rauniste@ametikool.ee">karl_gregor.rauniste@ametikool.ee</a>
+            </div>
+        </div>
+        <div class="bord">
+            <a>
+                <img alt="" src="https://ca.slack-edge.com/TUUFNUCSW-UUVS3EYPM-88776dcb64b8-512">
+            </a>
+            <div class="info">
+                <b>Karl Gregor Rauniste</b>
+                <p>kutseõpetaja</p>
+                <p>4524651</p>
+                <a href="mailto:karl_gregor.rauniste@ametikool.ee">karl_gregor.rauniste@ametikool.ee</a>
+            </div>
+        </div>
+        <div class="bord">
+            <a>
+                <img alt="" src="https://ca.slack-edge.com/TUUFNUCSW-UUVS3EYPM-88776dcb64b8-512">
+            </a>
+            <div class="info">
+                <b>Karl Gregor Rauniste</b>
+                <p>kutseõpetaja</p>
+                <p>4524651</p>
+                <a href="mailto:karl_gregor.rauniste@ametikool.ee">karl_gregor.rauniste@ametikool.ee</a>
+            </div>
+        </div>
+        <div class="bord">
+            <a>
+                <img alt="" src="https://ca.slack-edge.com/TUUFNUCSW-UUVS3EYPM-88776dcb64b8-512">
+            </a>
+            <div class="info">
+                <b>Karl Gregor Rauniste</b>
+                <p>kutseõpetaja</p>
+                <p>4524651</p>
+                <a href="mailto:karl_gregor.rauniste@ametikool.ee">karl_gregor.rauniste@ametikool.ee</a>
+            </div>
+        </div>
+    </div>
     <script src="html.js"></script>
 </body>
 </html>
